style.css
@import url('https://fonts.googleapis.com/css2?family=Frank+Ruhl+Libre:wght@400;500;700;900&display=swap');
@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Serif:ital,wght@0,300;0,400;0,500;1,300;1,400;1,500;1,600&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;1,300;1,400&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&display=swap');

/*GENERAL*/
html{
  height: 100%;
  width: 100%;
  margin: 0px;
  padding: 0px;
  box-sizing: border-box;
  overflow-x: hidden !important;
}

body{
  font-size: 16px;
  font-family: 'Open Sans', Helvetica, sans-serif;  
  background-image: radial-gradient(circle at 60%, rgb(80, 80, 80) 10%, rgb(55, 55, 55), rgb(35, 35, 35) 90%);
  background-attachment: fixed;
  height: 100%;
  overflow-x: hidden !important;
  line-height: 1.6;
}

.all{
  position: relative;
  min-height: 100%;
  padding-bottom: 90px;
  width: 100vw;
}


/*NAVIGATION*/
nav{
  display: flex;
  justify-content: space-around;
  align-items: center;
  height: 80px;
  z-index: 10;
  position: fixed;
  width: 100%;
  /* background-image: radial-gradient(circle at 60%, rgb(80, 80, 80) 10%, rgb(55, 55, 55), rgb(35, 35, 35) 90%);
  background-attachment: fixed; */
  transition: .5s;
  /* background-color: rgb(28, 28, 28); */
}

.nav-toggle{
  background-image: none;
  transition: all 0.5s ease-in-out;
}

.navbar-change nav{
  background-color: rgb(28, 28, 28);
  box-shadow: 0 2px rgba(0, 0, 0, 0.1);
  background-image: none;
  transition: all .5s;
}

.brand a{
  display: inline-flex;
  color: rgb(56, 119, 212);
  font-size: 2rem;
  text-decoration: none;
  font-family: 'Frank Ruhl Libre', serif;
  font-weight: 400;
  position: relative;
  /* bottom: 2vh; */
  z-index: 50;
  white-space: nowrap;
  margin-bottom: 0;
  vertical-align: center;
}

.nav-links{
  display: inline-flex;
  float: right;
  justify-content: space-around;
  width: 50%;
  height: 30px;
  z-index: 11;
  margin-bottom: 0;
}

li{
  list-style: none;
  display: inline-flex;
  font-size: 16px;   
}

.nav-links a{
  color: rgb(218, 218, 218);
  text-decoration: none;
  border-bottom: 3px solid transparent;
  transition: 0.25s;
}

.nav-links a:hover{
  border-bottom: 3px solid rgb(56, 119, 212);
  transition: 0.5s;
}

.nav-links a.active{
  border-bottom: 3px solid rgb(56, 119, 212);
}

.tint-active{
  position: fixed; 
  height: 100%;
  width: 100%;
  left: 0px;
  top: 0px; 
  opacity: 0.6;
  background-color: rgb(28, 28, 28);
  pointer-events: none;
  z-index: 3;
  transition: background-color 0.5s ease-in;
}

.content-inactive{
  pointer-events: none;
}

.blur-active{
  position: fixed; 
  height: 100%;
  width: 100%;
  left: 0px;
  top: 0px; 
  z-index: 300;
  filter: blur(10px);
}


.burger{
  display: none;
  cursor: pointer;
  z-index: 13;
}

.burger div{
  width: 25px;
  height: 3px;
  background-color: rgb(247, 247, 247);
  border: 2px, solid, rgb(247, 247, 247);
  z-index: 4;
  margin: 5px;
  transition: all 0.5s ease;
}

.navbar-active{
  background-color: rgb(28, 28, 28);
  transition: background-color 0.5s ease-in-out;
}

.no-scroll{
  overflow: hidden;
}


@keyframes navLinkFade{
  from{
      opacity: 0;
      transform: translateX(50px);
  }
  to{
      opacity: 1;
      transform: translateX(0px);
  }
}

.toggle .line1{
  transform: rotate(-45deg) translate(-5px, 6px);
}
.toggle .line2{
  opacity: 0;
}
.toggle .line3{
  transform: rotate(45deg) translate(-5px, -6px);
}


/*HOMEPAGE MAIN CONTENT*/
.titles{
  width: 35%;
  color: rgb(247, 247, 247);
  position: absolute;
  top: 35%;
  left: 11%;
  font-family: 'Open Sans', Helvetica, sans-serif;    
  white-space: nowrap;
}

/* .home-img{
  max-width: 80%;
  height: calc(80vh - 100px);
  position: absolute;
  bottom: 74px;
  right: 10%;
}  */
.home-img{
  /* max-width: 80%; */
  height: 80vh;
  position: fixed;
  bottom: 54px;
  right: 8%;
} 

.titles h1{
  /* font-size: 48px; */
  font-size: 4vw;
  font-weight: 300;
}

.titles p{
  /* font-size: 20px; */
  font-size: 1.5vw;
  letter-spacing: 1.3px;
  position: relative;
  font-weight: 300;
}


/* ABOUT ME */
.biography-background {
  object-fit: cover;
  object-position: 50% 60%;
}

.biography-banner{
  text-align: center;
  width: 50%;
  margin-left: auto;
  margin-right: auto;
  margin-bottom: 300px;
}

.biography-banner h2{
  font-size: 36px;
  font-weight: 300;
  color: rgb(247, 247, 247);    
  position: absolute;
  top: 200px;
  left: 0;
  right: 0;
  margin-left: auto;
  margin-right: auto;
}

#headshot{
  width: 200px;
  border: 2px solid rgb(56, 119, 212);
  border-radius: 100px;
  z-index: 2;
  position: relative;   
  top: 280px; 
  background-color: rgb(56, 119, 212);
}
.headshot-small{
  display: inline-block;
  width: 80px;
  border: 2px solid rgb(56, 119, 212);
  border-radius: 50%;
  position: fixed;
  top: 95px;
  left: 20px;
  transition: opacity .5s;
}

.headshot-small-fixed{
  opacity: 1;
}

.bio_container{
  width: 100%;
}

.bio_quote, .bio{
  color: rgb(247, 247, 247);
  max-width: 75ch;
  margin-left: auto;
  margin-right: auto;
  padding: 0 4rem;
}

.bio_quote{
  text-align: center;
  margin-top: 110px;
  margin-bottom: 50px;
  margin-top: 240px;
}

.bio_quote h2{
  font-family: 'Open Sans', sans-serif;
  font-weight: 600;
}

.bio p{
  white-space: normal;
  padding-bottom: 20px;
  font-family: 'Roboto', sans-serif;
  font-weight: 300;
}

.resume{
  text-align: center;
  position: absolute;
  left: 0;
  right: 0;
  margin-left: auto;
  margin-right: auto;
}
/* ... */

